<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FAN</string>
    <string name="action_settings">Settings</string>

    <string name="player_list_view_name">Player 一覧</string>

    <string name="player_registration_view_name">Player 登録</string>
    <string name="player_registration_player_name">名称：</string>
    <string name="player_registration_game_event">種目：</string>
    <string name="player_registration_category">カテゴリー：</string>
    <string name="player_registration_result_type">結果タイプ：</string>
    <string name="player_registration_result_type_score">スコア</string>
    <string name="player_registration_result_type_time">タイム</string>
    <string name="player_registration_player_color">カラー：</string>
    <string name="player_registration_player_font_color">文字色：</string>
    <string name="player_registration_player_icon">アイコン：</string>
    <string name="player_registration_player_image">画像：</string>
    <string name="player_registration_player_comment">メモ：</string>

    <string name="game_list_view_name">試合一覧</string>
    <string name="game_list_view_filter">Filter</string>
    <string name="game_list_view_filter_gameday">試合日</string>
    <string name="game_list_view_filter_category">カテゴリー</string>
    <string name="game_list_view_filter_type">タイプ</string>

    <string name="game_registration_view_name">試合情報 登録</string>
    <string name="game_registration_type">タイプ：</string>
    <string name="game_registration_category">カテゴリ：</string>
    <string name="game_registration_info">試合情報：</string>
    <string name="game_registration_date">開催日：</string>
    <string name="game_registration_start_time">開始時間：</string>
    <string name="game_registration_end_time">終了時間：</string>
    <string name="game_registration_opposition">対戦相手：</string>
    <string name="game_registration_opposition_image">対戦相手画像：</string>
    <string name="game_registration_result">結果：</string>
    <string name="game_registration_result_score">スコア：</string>
    <string name="game_registration_result_time">タイム：</string>
    <string name="game_registration_place">場所：</string>
    <string name="game_registration_weather">天気：</string>
    <string name="game_registration_temperature">気温：</string>
    <string name="game_registration_comment">メモ：</string>

    <string name="game_registration_category_hint">J1リーグ</string>
    <string name="game_registration_info_hint">第1節</string>

    <string name="game_update_view_name">試合情報 更新</string>

    <string name="game_image_regist_view_name">試合情報 画像登録</string>
    <string name="game_image">画像:</string>
    <string name="game_image_title">タイトル:</string>
    <string name="game_image_comment">備考:</string>

    <string name="hello">Hello World, ColorSelectDialog!</string>
    <string name="color_picker_viewer">Color Viewer(Click to select 16Color)</string>
    <string name="color_picker_red">RED</string>
    <string name="color_picker_green">GREEN</string>
    <string name="color_picker_blue">BLUE</string>
</resources>
