<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">

    <TableRow
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:layout_gravity="right"
            android:textSize="18sp"
            android:text="@string/game_registration_type"/>
        <Spinner
            android:id="@+id/inputGameType"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="0.4"
            android:textSize="18sp"
            android:text="@string/game_registration_category"/>
        <EditText
            android:id="@+id/inputGameCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:hint="@string/game_registration_category_hint"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="0.4"
            android:textSize="18sp"
            android:text="@string/game_registration_info"/>
        <EditText
            android:id="@+id/inputGameInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:hint="@string/game_registration_info_hint"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="0.4"
            android:textSize="18sp"
            android:text="@string/game_registration_date"/>
        <TextView
            android:id="@+id/inputGameDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:textSize="18sp"
            android:hint="クリックして設定"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="0.4"
            android:textSize="18sp"
            android:text="@string/game_registration_start_time"/>
        <TextView
            android:id="@+id/inputGameStartTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:textSize="18sp"
            android:hint="クリックして設定"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="0.4"
            android:textSize="18sp"
            android:text="@string/game_registration_end_time"/>
        <TextView
            android:id="@+id/inputGameEndTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:textSize="18sp"
            android:hint="クリックして設定"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="0.4"
            android:textSize="18sp"
            android:text="@string/game_registration_opposition"/>
        <EditText
            android:id="@+id/inputGameOpposition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="0.4"
            android:textSize="18sp"
            android:text="@string/game_registration_result"/>
        <EditText
            android:id="@+id/inputGameResult"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            />
    </TableRow>
    <TableRow
        android:id="@+id/inputRowResultScore">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="0.4"
            android:textSize="18sp"
            android:text="@string/game_registration_result_score"/>
        <EditText
            android:id="@+id/inputGameResultScore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            />
    </TableRow>
    <TableRow
        android:id="@+id/inputRowResultTime">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="0.4"
            android:textSize="18sp"
            android:text="@string/game_registration_result_time"/>
        <EditText
            android:id="@+id/inputGameResultTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="0.4"
            android:textSize="18sp"
            android:text="@string/game_registration_place"/>
        <EditText
            android:id="@+id/inputGamePlace"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="0.4"
            android:textSize="18sp"
            android:text="@string/game_registration_weather"/>
        <EditText
            android:id="@+id/inputGameWeather"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="0.4"
            android:textSize="18sp"
            android:text="@string/game_registration_temperature"/>
        <EditText
            android:id="@+id/inputGameTemperature"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="0.4"
            android:textSize="18sp"
            android:text="@string/game_registration_comment"/>
        <EditText
            android:id="@+id/inputGameComment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:lines="3"
            />
    </TableRow>
</TableLayout>
