<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:title="@string/player_registration_view_name"
        >
        <ImageView
            android:id="@+id/button_player_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_done_white_36dp"/>
    </android.support.v7.widget.Toolbar>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">

        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:layout_gravity="right"
                android:textSize="18sp"
                android:text="@string/player_registration_player_name"/>
            <EditText
                android:id="@+id/inputPlayerName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
            />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="0.4"
                android:textSize="18sp"
                android:text="@string/player_registration_game_event"/>
            <EditText
                android:id="@+id/inputGameEvent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="0.4"
                android:textSize="18sp"
                android:text="@string/player_registration_category"/>
            <EditText
                android:id="@+id/inputPlayerCategory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="0.4"
                android:textSize="18sp"
                android:text="@string/player_registration_result_type"/>
            <RadioGroup
                android:id="@+id/inputPlayerResultType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6">
                <RadioButton
                    android:id="@+id/playerResultTypeRB0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/player_registration_result_type_score"
                    android:checked="true"/>
                <RadioButton
                    android:id="@+id/playerResultTypeRB1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/player_registration_result_type_time"/>
            </RadioGroup>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="0.4"
                android:textSize="18sp"
                android:text="@string/player_registration_player_comment"/>
            <EditText
                android:id="@+id/inputPlayerComment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:lines="3"
                />
        </TableRow>
    </TableLayout>
</LinearLayout>